MapWrapper => JSON으로 변경(대량데이터에 Map사용시 불안정함) WebService Client관련 리소스 생성부분을 Service로 분리